# aoc-2022

./: Cargo.toml  README.md
src/: lib.rs  runner.rs  utils.rs
src/day01/: mod.rs
src/day02/: input.txt  mod.rs
src/day03/: mod.rs
src/day04/: mod.rs
src/day05/: mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
src/day08/: mod.rs
src/day09/: mod.rs
src/day10/: mod.rs
src/day24/: mod.rs
